Bug 375287 - "Download New Look and feel packages" window freezes for a few seconds when downloading a new L&F package
Summary: "Download New Look and feel packages" window freezes for a few seconds when d...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Global Theme packages (other bugs)
Version First Reported In: master
Platform: Neon Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-01-19 10:17 UTC by Lucas
Modified: 2017-01-23 13:53 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Lucas 2017-01-19 10:17:34 UTC
"Download New Look and feel packages" window freezes for a few seconds when downloading a new look and feel package. It only freezes with themes which are using dependencies like KShell or United. Tested on Neon git stable (Plasma 5.9 branch)
Comment 1 Lucas 2017-01-19 10:44:05 UTC
A video showing the issue
https://youtu.be/RzsL1icdv9Q
Comment 2 Aleix Pol 2017-01-20 19:58:34 UTC
See https://phabricator.kde.org/D4227
Comment 3 Aleix Pol 2017-01-23 13:53:43 UTC
Git commit 3178240748c6ad3380094fa78cc6dba2d0d19da8 by Aleix Pol.
Committed on 23/01/2017 at 13:53.
Pushed by apol into branch 'master'.

Don't block when running the post-install command

Summary:
Which in fact is the install command for KPackages

Reviewers: #frameworks, leinir, whiting, mart

Reviewed By: mart

Subscribers: broulik

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D4227

M  +32   -27   src/core/installation.cpp
M  +2    -1    src/core/installation.h

https://commits.kde.org/knewstuff/3178240748c6ad3380094fa78cc6dba2d0d19da8