Don't block when running the post-install command

Summary:
Which in fact is the install command for KPackages

BUG: 375287

Reviewers: #frameworks, leinir, whiting, mart

Reviewed By: mart

Subscribers: broulik

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D4227